crates/mineral-tui/src/components/snapshots/mineral_tui__components__spectrum__tests__spectrum_baseline_snapshot.snap
---
source: crates/mineral-tui/src/components/spectrum.rs
description: "频谱静默基线(SpectrumState::new())"
expression: terminal.backend()
---
"╭ spectrum ────────────────────────────╮"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂│"
"│20Hz                             20kHz│"
"╰──────────────────────────────────────╯"
