crates/mineral-tui/src/components/snapshots/mineral_tui__components__spectrum__tests__spectrum_silent_full_width_snapshot.snap
---
source: crates/mineral-tui/src/components/spectrum.rs
description: "频谱无音频(idle baseline,占满宽度无起伏)"
expression: terminal.backend()
---
"╭ spectrum ────────────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂│"
"│20Hz                                                                     20kHz│"
"╰──────────────────────────────────────────────────────────────────────────────╯"
