crates/mineral-tui/src/components/snapshots/mineral_tui__components__spectrum__tests__spectrum_with_audio_full_width_snapshot.snap
---
source: crates/mineral-tui/src/components/spectrum.rs
description: "频谱有音频(mock bars,占满宽度有起伏)"
expression: terminal.backend()
---
"╭ spectrum ────────────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"│       ▔   ▂   ▃   ▅   ▇          ▁   ▂   ▄   ▆          ▔   ▂   ▃   ▅   ▇    │"
"│   ▆   █   █  ▔█  ▂█  ▃█  ▅   ▇   █   █  ▁█  ▃█  ▄   ▆   █   █  ▔█  ▂█  ▃█  ▅ │"
"│  ▃█  ▄█  ▆█  ██  ██ ▔██ ▂█  ▄█  ▅█  ▇█  ██  ██ ▁█  ▃█  ▄█  ▆█  ██  ██ ▔██ ▂█ │"
"│  ██ ▁██ ▃██ ▅██ ▆██ ███ ██ ▔██ ▂██ ▄██ ▅██ ▇██ ██  ██ ▁██ ▃██ ▅██ ▆██ ███ ██ │"
"│ ▇██ ███ ███▁███▃███▅███▆██ ███ ███▔███▂███▄███▆██ ▇██ ███ ███▁███▃███▅███▆██ │"
"│▄███▆███▇██████████████████▅███▇██████████████████▄███▆███▇██████████████████▅│"
"│20Hz                                                                     20kHz│"
"╰──────────────────────────────────────────────────────────────────────────────╯"
